# MoonClaude

./: .env.example  .gitignore  WIRE_PROTOCOL.md  pyproject.toml
scripts/: gen_protocol_doc.py
src/moon_claude/cli/: __main__.py  main.py
src/moon_claude/cli/commands/: version.py
src/moon_claude/core/: config.py  logging_setup.py
src/moon_claude/core/bus/: __init__.py  commands.py  envelope.py  events.py
src/moon_claude/core/transport/: socket_server.py
src/moon_claude/tui/: __main__.py
